--- a/typer/core/templates/event/index.html.j2
+++ b/typer/core/templates/event/index.html.j2
@@ -18,7 +18,7 @@
                 <th>Czas rozpoczęcia</th>
             </tr>
             </thead>
-            {% for event in events %}
+            {% for event in events|sort(attribute='start_time') %}
             <tr>
             <td><a href="/typer/event/{{ event.id }}">{{ event.name }}</a></td>
             <td>{{ event.home_name }}</td>
