--- a/typer/core/templates/user/home.html.j2
+++ b/typer/core/templates/user/home.html.j2
@@ -46,7 +46,7 @@
                 <th>Data rozpoczęcia</th>
             </tr>
             </thead>
-            {% for event in events %}
+            {% for event in events|sort(attribute='start_time') %}
             <tr>
                 <td><a href="/typer/event/{{ event.id }}">{{ event.name }}</a></td>
                 <td>{{ event.home_name }}</td>
@@ -90,7 +90,7 @@
                 <th>Data rozpoczęcia</th>
             </tr>
             </thead>
-            {% for event in events_to_close %}
+            {% for event in events_to_close|sort(attribute='start_time') %}
             <tr>
                 <td><a href="/typer/event/{{ event.id }}">{{ event.name }}</a></td>
                 <td>{{ event.home_name }}</td>
